deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: class-management-fe-deployment
  labels:
    app: class-management-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: class-management-fe
  template:
    metadata:
      labels:
        app: class-management-fe
    spec:
      containers:
        - name: class-management-fe-container
          image: th1enlm02/class-management-fe:latest
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: class-management-auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: class-management-auth-service
  template:
    metadata:
      labels:
        app: class-management-auth-service
    spec:
      containers:
        - name: class-management-auth-service-container
          image: th1enlm02/class-management-auth-service:latest
          ports:
            - containerPort: 3077
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment-mysql
  labels:
    app: auth-service-mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: auth-service-mysql
    spec:
      containers:
        - name: auth-service-mysql-container
          image: mysql:8.3.0
          ports:
            - containerPort: 3306
          volumneMounts:
            - name: auth-service-mysql-data
              mountPath: /var/lib/mysql
      volumnes:
        - name: auth-service-mysql-data
          persistentVolumeClaim:
            claimName: auth-service-mysql-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment-phpmyadmin
  labels:
    app: auth-phpmyadmin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-phpmyadmin
  template:
    metadata:
      labels:
        app: auth-phpmyadmin
    spec:
      containers:
        - name: auth-phpmyadmin-container
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment
  labels:
    app: class-management-student-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: class-management-student-service
  template:
    metadata:
      labels:
        app: class-management-student-service
    spec:
      containers:
        - name: class-management-student-service-container
          image: th1enlm02/class-management-student-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment-mysql
  labels:
    app: student-service-mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-service-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: student-service-mysql
    spec:
      containers:
        - name: student-service-mysql-container
          image: mysql:8.3.0
          ports:
            - containerPort: 3306
          volumneMounts:
            - name: student-service-mysql-data
              mountPath: /var/lib/mysql
      volumnes:
        - name: student-service-mysql-data
          persistentVolumeClaim:
            claimName: student-service-mysql-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment-phpmyadmin
  labels:
    app: student-phpmyadmin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-phpmyadmin
  template:
    metadata:
      labels:
        app: student-phpmyadmin
    spec:
      containers:
        - name: student-phpmyadmin-container
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lecturer-deployment
  labels:
    app: class-management-lecturer-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: class-management-lecturer-service
  template:
    metadata:
      labels:
        app: class-management-lecturer-service
    spec:
      containers:
        - name: class-management-lecturer-service-container
          image: th1enlm02/class-management-lecturer-service:latest
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lecturer-deployment-mongodb
  labels:
    app: lecturer-service-mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lecturer-service-mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lecturer-service-mongodb
    spec:
      containers:
        - name: lecturer-service-mongodb-container
          image: mongo:7.0.9
          ports:
            - containerPort: 27017
          volumneMounts:
            - name: lecturer-service-mongodb-data
              mountPath: /data/db
      volumnes:
        - name: lecturer-service-mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lecturer-deployment-mongo-express
  labels:
    app: lecturer-mongo-express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lecturer-mongo-express
  template:
    metadata:
      labels:
        app: lecturer-mongo-express
    spec:
      containers:
        - name: lecturer-mongo-express-container
          image: mongo-express:1-20
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: class-deployment
  labels:
    app: class-management-class-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: class-management-class-service
  template:
    metadata:
      labels:
        app: class-management-class-service
    spec:
      containers:
        - name: class-management-class-service-container
          image: th1enlm02/class-management-class-service:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: class-deployment-postgresql
  labels:
    app: class-service-postgresql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: class-service-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: class-service-postgresql
    spec:
      containers:
        - name: class-service-postgresql-container
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumneMounts:
            - name: class-service-postgresql-data
              mountPath: /var/lib/postgresql/data
      volumnes:
        - name: class-service-postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: class-deployment-pgadmin
  labels:
    app: class-pgadmin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: class-pgadmin
  template:
    metadata:
      labels:
        app: class-pgadmin
    spec:
      containers:
        - name: class-pgadmin-container
          image: elestio/pgadmin:latest
          ports:
            - containerPort: 80
