ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: class-management-ingress
spec:
  rules:
  - host: NT533O21_group07.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: class-management-fe
            port:
              number: 3000
